--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         </ul>
       </nav>
     </header>
+    <button>menu</button>
 
     <section>
       <section class="about" id="about">
@@ -113,13 +114,13 @@
         <h3 class="subhead">
           &rAarr;Educational, Social and Communal contributions &lAarr;
         </h3>
-        <table style="width: 95%">
+        <table>
           <thead style="border: 2px solid black">
             <tr>
-              <th style="border: 1px solid rgb(173, 44, 44)">Project Name</th>
-              <th style="border: 1px solid rgb(173, 44, 44)">Details</th>
-              <th style="border: 1px solid rgb(173, 44, 44)">Duration</th>
-              <th style="border: 1px solid rgb(173, 44, 44)">Link</th>
+              <th style="background-color: #0d0c0c">Project Name</th>
+              <th style="background-color: #0d0c0c">Details</th>
+              <th style="background-color: #0d0c0c">Duration</th>
+              <th style="background-color: #0d0c0c">Link</th>
             </tr>
           </thead>
           <tbody>
