navbar closes by clicking anywhere

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <script src="javascript.js"></script>
   </head>
 
-  <body>
+  <body >
     <header>
       <nav class="navbar" style="display: flex; justify-content: end; " >
         <h1>Portfolio</h1>
@@ -55,7 +55,7 @@
             autofocus
             />
           </div>
-          <img onclick="handleMenu()" class="menu"  src="./assets/menu.png" alt="menu">
+          <img onclick="handleMenu()" id="menu" class="menu"  src="./assets/menu.png" alt="menu">
         </div>
         
       </nav>
@@ -135,7 +135,7 @@
         <table style="width: 95%">
           <thead style="border: 2px solid black">
             <tr>
-              <th style="border: 1px solid rgb(173, 44, 44);  ">Project Name</th>
+              <th style="border: 1px solid rgb(173, 44, 44)">Project Name</th>
               <th style="border: 1px solid rgb(173, 44, 44)">Details</th>
               <th style="border: 1px solid rgb(173, 44, 44)">Duration</th>
               <th style="border: 1px solid rgb(173, 44, 44)">Link</th>
