--- a/index.html
+++ b/index.html
@@ -7,219 +7,373 @@
 
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="This is description" />
-    <meta name="keywords" content="html, html tutorials, web development" />
-    <meta name="robots" content="INDEX, FOLLOW" />
-    <title>Portfolio</title>
-    <link
-      rel="icon"
-      type="image/x-icon"
-      href="./assets/favicon_io/favicon.ico"
-    />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" />
-    <link rel="stylesheet" href="./styling.css" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Cabin:wght@400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
-    <script src="javascript.js"></script>
-  </head>
+	<head>
+		<meta charset="UTF-8" />
+		<meta
+			http-equiv="X-UA-Compatible"
+			content="IE=edge"
+		/>
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1.0"
+		/>
+		<meta
+			name="description"
+			content="This is description"
+		/>
+		<meta
+			name="keywords"
+			content="html, html tutorials, web development"
+		/>
+		<meta name="robots" content="INDEX, FOLLOW" />
+		<title>Portfolio</title>
+		<link
+			rel="icon"
+			type="image/x-icon"
+			href="./assets/favicon_io/favicon.ico"
+		/>
+		<link
+			rel="stylesheet"
+			href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+		/>
+		<link rel="stylesheet" href="./styling.css" />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Cabin:wght@400;500;600;700&display=swap"
+			rel="stylesheet"
+		/>
+		<script src="javascript.js"></script>
+	</head>
 
-  <body>
-    <header>
-      <nav class="navbar">
-        <h1>Portfolio</h1>
-        <ul>
-          <div class="search">
-            <input
-              type="text"
-              name="search"
-              id="search"
-              placeholder="Search my Portfolio"
-              autofocus
-            />
-          </div>
+	<body>
+		<header>
+			<nav class="navbar">
+				<h1>Portfolio</h1>
+				<ul>
+					<div class="search">
+						<input
+							type="text"
+							name="search"
+							id="search"
+							placeholder="Search my Portfolio"
+							autofocus
+						/>
+					</div>
 
-          <li><a href="#work"> Contributions</a></li>
-          <li><a href="#project"> Projects</a></li>
-          <li><a href="#contact"> Contact</a></li>
-          <li>
-            <a href="./pages/learnings.html" target="_blank"> Learnings</a>
-          </li>
-          <li><a href="#about"> About</a></li>
-        </ul>
-      </nav>
-    </header>
+					<li>
+						<a href="#work"> Contributions</a>
+					</li>
+					<li>
+						<a href="#project"> Projects</a>
+					</li>
+					<li><a href="#contact"> Contact</a></li>
+					<li>
+						<a
+							href="./pages/learnings.html"
+							target="_blank"
+						>
+							Learnings</a
+						>
+					</li>
+					<li><a href="#about"> About</a></li>
+				</ul>
+			</nav>
+		</header>
 
-    <section>
-      <section class="about" id="about">
-        <div class="subhead">
-          <h2>About me</h2>
-        </div>
-        <div class="content">
-          <div class="contentbox w50 w75">
-            <h3>I'm a Developer.</h3>
-            <p>
-              🌀Self-taught Web Dev ⚡ Pursuing degree in Computer Science 📸
-              Photographer .
-            </p>
+		<section>
+			<section class="about" id="about">
+				<div class="subhead">
+					<h2>About me</h2>
+				</div>
+				<div class="content">
+					<div class="contentbox w50 w75">
+						<h3>
+							Hello, I'm a
+							<span class="about-me-title"
+								>Web Developer.</span
+							>
+						</h3>
+						<p>
+							<span class="about-me skill-1">
+								🌀Self-taught Web Dev</span
+							>
+							<span class="about-me skill-2"
+								>⚡ Pursuing degree in Computer
+								Science</span
+							>
+							<span class="about-me skill-3"
+								>📸Photographer .</span
+							>
+						</p>
 
-            <p>
-              I love programming and making random web-based applications for
-              fun. I am a future full-stack developer, currently I'm focusing on
-              the backend.
-            </p>
-            <h3>My Interests</h3>
-            <p>
-              Apart from coding! <br /><br />
-              >reading books 📖<br />
-              >photography; 📸<br />
-              >sketching/painting!; 🎮<br />
-              >Networking is <3 lets connect🙋‍♂️
-            </p>
-          </div>
-          <div aling="right" class="w50">
-            <img src="./assets/girl.jpg" class="img-responsive imgIM" />
-          </div>
-        </div>
-      </section>
+						<p class="about-me-p">
+							I love programming and making random
+							web based applications for fun. I am
+							a future full stack developer,
+							currently I'm focusing on the
+							backend.
+						</p>
+						<hr />
+						<h2 class="about-me-intrest">
+							My Interests
+						</h2>
+						<ul class="my-intrest">
+							<li>Reading Books 📖</li>
+							<li>Photography 📸</li>
+							<li>Sketching/Painting! 🎮</li>
+							<li>
+								Networking is x3 lets connect🙋‍♂️
+							</li>
+						</ul>
+						<!-- <p>
+							Apart from coding! <br /><br />
+							>reading books 📖<br />
+							><br />
+							><br />
+							>
+						</p> -->
+					</div>
+					<div aling="right" class="w50">
+						<img
+							src="./assets/girl.jpg"
+							class="img-responsive imgIM"
+						/>
+					</div>
+				</div>
+			</section>
 
-      <div class="project" id="project">
-        <h3 class="subhead">&rAarr;Projects&lAarr;</h3>
+			<div class="project" id="project">
+				<div class="subhead">
+					<h2 class="">Projects</h2>
+				</div>
 
-        <p style="text-align: center">
-          <a
-            href="./pages/learnings.html"
-            style="text-decoration: none; color: crimson"
-            >Check Out My Learnings</a
-          >
-          <br />
-          --to be updated--
-        </p>
-      </div>
+				<p style="text-align: center">
+					<br />
+					<a
+						class="project-link"
+						href="./pages/learnings.html"
+						>Check Out My Learnings</a
+					>
+					<br />
+					<br />
+					<span class="project-update">
+						--to be updated--
+					</span>
+				</p>
+			</div>
+			<div class="work" id="work">
+				<!-- Tables -->
+				<div class="subhead">
+					<h3>
+						Educational,
+						<br />
+						<br />
+						Social and Communal contributions
+					</h3>
+				</div>
+				<table style="width: 95%">
+					<thead style="border: 2px solid black">
+						<tr>
+							<th
+								style="
+									border: 1px solid
+										rgb(173, 44, 44);
+								"
+							>
+								Project Name
+							</th>
+							<th
+								style="
+									border: 1px solid
+										rgb(173, 44, 44);
+								"
+							>
+								Details
+							</th>
+							<th
+								style="
+									border: 1px solid
+										rgb(173, 44, 44);
+								"
+							>
+								Duration
+							</th>
+							<th
+								style="
+									border: 1px solid
+										rgb(173, 44, 44);
+								"
+							>
+								Link
+							</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr align="center">
+							<td>Education</td>
+							<td>
+								I've been a part of various ed led
+								communities, where i am managing
+								andn working towards the growth
+								and development of the women in
+								tech and science
+							</td>
+							<td>2 mos</td>
+							<td>#</td>
+						</tr>
+						<tr align="center">
+							<td>Politics</td>
+							<td>
+								On the great saying
+								<q
+									><cite
+										>you can't be neutral in a
+										moving train</cite
+									></q
+								>
+								and the teachings of my
+								professors, I've been interested
+								in improving the current political
+								and community conditions of the
+								world, taking small yet
+								significant steps to create
+								awareness regarding fraternity,
+								brotherhood and promoting peace
+								accross the nation through stage
+								acts, rallies, marathons and doing
+								street plays.
+							</td>
+							<td>4 mos</td>
+							<td>#</td>
+						</tr>
+						<tr align="center">
+							<td>Art</td>
+							<td>
+								I've been interested in art since
+								my kindergartin where I first won
+								my first prize in a school led
+								interschool drawing Competition,
+								while drawing a tree. From then,
+								though I have never created any
+								masterpiece nor notable alumni,
+								but made several leisure time
+								sketched, you can check out.
+							</td>
+							<td>4 mos</td>
+							<td>#</td>
+						</tr>
+						<tr align="center">
+							<td>Social Contributions</td>
+							<td>
+								Lorem, ipsum dolor sit amet
+								consectetur adipisicing elit.
+								Quis, eaque. Vel unde voluptates
+								cumque a deserunt minima illo odit
+								necessitatibus hic facere
+								voluptatibus, veritatis numquam
+								veniam possimus ab nesciunt. Sunt?
+							</td>
+							<td>4 mos</td>
+							<td>#</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+		</section>
 
-      <div class="work" id="work">
-        <!-- Tables -->
-        <h3 class="subhead">
-          &rAarr;Educational, Social and Communal contributions &lAarr;
-        </h3>
-        <table style="width: 95%">
-          <thead style="border: 2px solid black">
-            <tr>
-              <th style="border: 1px solid rgb(173, 44, 44)">Project Name</th>
-              <th style="border: 1px solid rgb(173, 44, 44)">Details</th>
-              <th style="border: 1px solid rgb(173, 44, 44)">Duration</th>
-              <th style="border: 1px solid rgb(173, 44, 44)">Link</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr align="center">
-              <td>Education</td>
-              <td>
-                I've been a part of various ed led communities, where i am
-                managing andn working towards the growth and development of the
-                women in tech and science
-              </td>
-              <td>2 mos</td>
-              <td>#</td>
-            </tr>
-            <tr align="center">
-              <td>Politics</td>
-              <td>
-                On the great saying
-                <q><cite>you can't be neutral in a moving train</cite></q> and
-                the teachings of my professors, I've been interested in
-                improving the current political and community conditions of the
-                world, taking small yet significant steps to create awareness
-                regarding fraternity, brotherhood and promoting peace accross
-                the nation through stage acts, rallies, marathons and doing
-                street plays.
-              </td>
-              <td>4 mos</td>
-              <td>#</td>
-            </tr>
-            <tr align="center">
-              <td>Art</td>
-              <td>
-                I've been interested in art since my kindergartin where I first
-                won my first prize in a school led interschool drawing
-                Competition, while drawing a tree. From then, though I have
-                never created any masterpiece nor notable alumni, but made
-                several leisure time sketched, you can check out.
-              </td>
-              <td>4 mos</td>
-              <td>#</td>
-            </tr>
-            <tr align="center">
-              <td>Social Contributions</td>
-              <td>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis,
-                eaque. Vel unde voluptates cumque a deserunt minima illo odit
-                necessitatibus hic facere voluptatibus, veritatis numquam veniam
-                possimus ab nesciunt. Sunt?
-              </td>
-              <td>4 mos</td>
-              <td>#</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-    </section>
+		<!-- FLEXBOX -->
+		<div class="flexbox" id="contact">
+			<div class="item" id="item-1">
+				<a href="">GitHub </a>fsf
+			</div>
+			<div class="item" id="item-2">
+				<a href="">LinkedIn </a>
+			</div>
+			<div class="item" id="item-3">
+				<a href="">NewsLetter </a>
+			</div>
+			<div class="item" id="item-4">
+				<a href="">Medium </a>
+			</div>
+			<div class="item" id="item-5">
+				<a href="">Quora </a>
+			</div>
+			<div class="item" id="item-6">
+				<a href="">Leetcode </a>
+			</div>
+		</div>
 
-    <!-- FLEXBOX -->
-    <div class="flexbox" id="contact">
-      <div class="item" id="item-1"><a href="">GitHub </a>fsf</div>
-      <div class="item" id="item-2"><a href="">LinkedIn </a></div>
-      <div class="item" id="item-3"><a href="">NewsLetter </a></div>
-      <div class="item" id="item-4"><a href="">Medium </a></div>
-      <div class="item" id="item-5"><a href="">Quora </a></div>
-      <div class="item" id="item-6"><a href="">Leetcode </a></div>
-    </div>
+		<footer>
+			<div>
+				Handcrafted by
+				<a
+					href="https://www.linkedin.com/in/faeka/"
+					target="_blank"
+				>
+					Fyka
+				</a>
+				and Open Source ♥ | 2022 All rights
+				reserved
+				<div class="footer-wrapper">
+					<div class="icons">
+						<ul>
+							<li>
+								<a
+									title="linkedin"
+									target="_blank"
+									href="https://www.linkedin.com/in/"
+									class="ml-3 text-gray-400"
+								>
+									<i
+										class="fab fa-linkedin-in icon"
+									></i>
+								</a>
+							</li>
+							<li>
+								<a
+									title="github"
+									target="_blank"
+									href="https://github.com/"
+									class="ml-3 text-gray-400"
+								>
+									<i
+										class="fab fa-github icon"
+									></i>
+								</a>
+							</li>
+							<li>
+								<a
+									title="twitter"
+									target="_blank"
+									href="https://twitter.com/"
+									class="ml-3 text-gray-400"
+								>
+									<i
+										class="fab fa-twitter icon"
+									></i>
+								</a>
+							</li>
+							<li>
+								<a
+									title="youtube"
+									target="_blank"
+									href="#"
+									class="ml-3 text-gray-400"
+								>
+									<i
+										class="fab fa-instagram icon"
+									></i>
+								</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
 
-    <footer>
-    <div>
-      Handcrafted by
-      <a href="https://www.linkedin.com/in/faeka/" target="_blank">
-        Fyka </a> and Open Source ♥
-      | 2022 All rights reserved
-        <div class="footer-wrapper">
-          <div class="icons">
-            <ul>
-              <li>
-                <a title="linkedin" target="_blank" href="https://www.linkedin.com/in/"
-                  class="ml-3 text-gray-400">
-                  <i class="fab fa-linkedin-in icon"></i>
-                </a>
-              </li>
-              <li>
-                <a title="github" target="_blank" href="https://github.com/" class="ml-3 text-gray-400">
-                  <i class="fab fa-github icon"></i>
-                </a>
-              </li>
-              <li>
-                <a title="twitter" target="_blank" href="https://twitter.com/" class="ml-3 text-gray-400">
-                  <i class="fab fa-twitter icon"></i>
-                </a>
-              </li>
-              <li>
-                <a title="youtube" target="_blank" href="#" class="ml-3 text-gray-400">
-                  <i class="fab fa-instagram icon"></i>
-                </a>
-              </li>
-            </ul>
-          </div>
-    
-        </div>
-    </div>
-
-    <span class="floating-footer">
-      Copyright &copy; reserved w Fyka Ansar &nbsp;
-    </span>
-  </footer>
-    <script src="./javascript.js"></script>
-  </body>
+			<span class="floating-footer">
+				Copyright &copy; reserved w Fyka Ansar
+				&nbsp;
+			</span>
+		</footer>
+		<script src="./javascript.js"></script>
+	</body>
 </html>
