Add a favicon site

--- a/pages/learnings/icons.html
+++ b/pages/learnings/icons.html
@@ -17,14 +17,15 @@
       server
     </p>
     <ul>
+      <li>Favicon.ico</li>
       <li>Lineicons</li>
       <li>Fontawesome</li>
     </ul>
     <i class="lni lni-angellist" style="font-size: 300px; color: pink"></i>
 
     <p>
-      Let's see how we can use a favicon. it is a little icon visible on the
-      browser tab just before the page title! So a favicon is really crucial for
+      Let's see how we can use a favicon. It is a little icon visible on the
+      browser tab just before the page title!, or A favicon also known as website icon, tab icon, URL icon So a favicon is really crucial for
       users to identify your application or website.
     </p>
   </body>
