--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <title>Portfolio</title>
   <link rel="icon" type="image/x-icon" href="./assets/favicon_io/favicon.ico" />
   <link rel="stylesheet" href="./styling.css" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" />
   <link href="https://fonts.googleapis.com/css2?family=Cabin:wght@400;500;600;700&display=swap" rel="stylesheet" />
   <script src="javascript.js"></script>
 </head>
@@ -169,6 +170,33 @@
       <a href="https://www.linkedin.com/in/faeka/" target="_blank">
         Fyka Ansari</a>
       | 2022 All rights reserved
+      <div class="footer-wrapper">
+        <div class="icons">
+          <ul>
+            <li>
+              <a title="linkedin" target="_blank" href="https://www.linkedin.com/in/" class="ml-3 text-gray-400">
+                <i class="fab fa-linkedin-in icon"></i>
+              </a>
+            </li>
+            <li>
+              <a title="github" target="_blank" href="https://github.com/" class="ml-3 text-gray-400">
+                <i class="fab fa-github icon"></i>
+              </a>
+            </li>
+            <li>
+              <a title="twitter" target="_blank" href="https://twitter.com/" class="ml-3 text-gray-400">
+                <i class="fab fa-twitter icon"></i>
+              </a>
+            </li>
+            <li>
+              <a title="youtube" target="_blank" href="#" class="ml-3 text-gray-400">
+                <i class="fab fa-instagram icon"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
+
+      </div>
     </div>
 
     <span class="floating-footer">
