--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta name="description" content="This is description" />
   <meta name="keywords" content="html, html tutorials, web development" />
   <meta name="robots" content="INDEX, FOLLOW" />
-  <title>Portfolio</title>
+ <title>Portfolio</title>
   <link rel="icon" type="image/x-icon" href="./assets/favicon_io/favicon.ico" />
   <link rel="stylesheet" href="./styling.css" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" />
@@ -26,7 +26,7 @@
 <body>
   <header>
     <nav class="navbar" style="display: flex; justify-content: end; ">
-      <h1>Portfolio</h1>
+      <a href="#" class="navbar" style="display: flex; justify-content: start">Portfolio</a>
       <ul>
 
         <li><a href="#work"> Contributions</a></li>
@@ -59,9 +59,20 @@
         <li>
           <a href="./pages/learnings.html" target="_blank"> Learnings</a>
         </li>
-        <li><a href="#contact"> Contact</a></li>
-        <li><a href="#project"> Projects</a></li>
-        <li><a href="#work"> Contributions</a></li>
+        <header>
+          <a href="index.html" class="logo"><i class="fab fa-node-js"></i>Fyka/a>
+  
+          <div id="menu" class="fas fa-bars"></div>
+          <nav class="navbar">
+              <ul>
+              <li><a class="active" href="#home">Home</a></li>
+              <li><a href="#about">About</a></li>
+              <li><a href="#skills">Skills</a></li>
+              <li><a href="#education">Education</a></li>
+              <li><a href="#work">Work</a></li>
+              <li><a href="#experience">Experience</a></li>
+              </ul>
+          </nav>
       </ul>
 
     </div>
