--- a/index.html
+++ b/index.html
@@ -69,36 +69,39 @@
 
   <section>
     <section class="about" id="about">
-      <div class="subhead">
+      <!-- About me heading is not looking good here -->
+      <!-- <div class="subhead">
         <h2>About me</h2>
-      </div>
+      </div> -->
       <div class="content">
-        <div class="contentbox w50 w75">
-          <h3>I'm a Developer.</h3>
-          <p>
-            🌀Self-taught Web Dev ⚡ Pursuing degree in Computer Science 📸
-            Photographer .
-          </p>
-
-          <p>
-            I love programming and making random web-based applications for
-            fun. I am a future full-stack developer, currently I'm focusing on
-            the backend.
-          </p>
-          <h3>My Interests</h3>
-          <p>
-            Apart from coding! <br /><br />
-            >reading books 📖<br />
-            >photography; 📸<br />
-            >sketching/painting!; 🎮<br />
-            >Networking is &#60 3 lets connect🙋‍♂️
-          </p>
+        <div class="contentbox w50">
+          <h3>Hello there, I am</h3>
+          <h1>Fyka Ansari</h1>
+          <div class="about_self">
+            <h3>I'm a Developer.</h3>
+            <p>
+              🌀Self-taught Web Dev ⚡ Pursuing degree in Computer Science 📸
+              Photographer.<br />
+              I love programming and making random web-based applications for
+              fun. I am a future full-stack developer, currently I'm focusing
+              on the backend.
+            </p>
+          </div>
+          <div class="about_hobby">
+            <h3>My Interests apart from coding</h3>
+            <p>
+              📖 reading books<br />
+              📸 photography<br />
+              🎨 sketching/painting!<br />
+            </p>
+          </div>
+          <button class="about_btn">Let's connect</button>
         </div>
-        <div aling="right" class="w50">
+        <div aling="right" class="w50 about_img">
           <img src="./assets/girl.jpg" class="img-responsive imgIM" />
         </div>
-      </div>
-    </section>
+    </div>
+  </section>
 
     <div class="project" id="project">
       <h3 class="subhead">&rAarr;Projects&lAarr;</h3>
