--- a/projects/animesite/index.html
+++ b/projects/animesite/index.html
@@ -279,7 +279,7 @@
                         <i class="fa fa-star"></i>
                     </div>
                     <img
-                        src="http://t1.gstatic.com/licensed-image?q=tbn:ANd9GcQ-jN__eNpfqVbU1k-kifLJ45o1ht9mSneMDBmtX9G7ynCfb4uV-Cs6R4Upnnd4i3Em">
+                        src="https://3.bp.blogspot.com/-Ixg1FF_89o4/UH5fluAjHBI/AAAAAAAAHLk/gnvEmYrlyUY/s1600/DSC01119.JPG">
                     <h3 class="name">Eiichiro Oda</h3>
 
                 </div>
