--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <div class="content">
         <div class="contentbox w50">
           <h3>Hello there, I am</h3>
-          <h1>Fyka Ansari</h1>
+          <h1>Karl Vegan</h1>
           <div class="about_self">
             <h3>I'm a Developer.</h3>
             <p>
@@ -100,90 +100,20 @@
         <div aling="right" class="w50 about_img">
           <img src="./assets/girl.jpg" class="img-responsive imgIM" />
         </div>
-    </div>
-  </section>
+      </div>
+    </section>
 
     <div class="project" id="project">
       <h3 class="subhead">&rAarr;Projects&lAarr;</h3>
-
-      <p style="text-align: center">
-        <a href="./pages/learnings.html" style="text-decoration: none; color: crimson">Check Out My Learnings</a>
-        <br />
-        --to be updated--
-      </p>
+      <p style="text-align: center">--to be updated--</p>
     </div>
 
-    <div class="work" id="work">
-      <!-- Tables -->
-      <h3 class="subhead">
-        &rAarr;Educational, Social and Communal contributions &lAarr;
-      </h3>
-      <table style="width: 95%">
-        <thead style="border: 2px solid black">
-          <tr>
-            <th style="border: 1px solid rgb(173, 44, 44)">Project Name</th>
-            <th style="border: 1px solid rgb(173, 44, 44)">Details</th>
-            <th style="border: 1px solid rgb(173, 44, 44)">Duration</th>
-            <th style="border: 1px solid rgb(173, 44, 44)">Link</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>Education</td>
-            <td>
-              I've been a part of various ed led communities, where i am
-              managing andn working towards the growth and development of the
-              women in tech and science
-            </td>
-            <td>2 mos</td>
-            <td>#</td>
-          </tr>
-          <tr>
-            <td>Politics</td>
-            <td>
-              On the great saying
-              <q><cite>you can't be neutral in a moving train</cite></q> and
-              the teachings of my professors, I've been interested in
-              improving the current political and community conditions of the
-              world, taking small yet significant steps to create awareness
-              regarding fraternity, brotherhood and promoting peace accross
-              the nation through stage acts, rallies, marathons and doing
-              street plays.
-            </td>
-            <td>4 mos</td>
-            <td>#</td>
-          </tr>
-          <tr>
-            <td>Art</td>
-            <td>
-              I've been interested in art since my kindergartin where I first
-              won my first prize in a school led interschool drawing
-              Competition, while drawing a tree. From then, though I have
-              never created any masterpiece nor notable alumni, but made
-              several leisure time sketched, you can check out.
-            </td>
-            <td>4 mos</td>
-            <td>#</td>
-          </tr>
-          <tr>
-            <td>Social Contributions</td>
-            <td>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis,
-              eaque. Vel unde voluptates cumque a deserunt minima illo odit
-              necessitatibus hic facere voluptatibus, veritatis numquam veniam
-              possimus ab nesciunt. Sunt?
-            </td>
-            <td>4 mos</td>
-            <td>#</td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
+
   </section>
 
   <!-- FLEXBOX -->
   <div class="flexbox" id="contact">
-    <div class="item" id="item-1"><a href="">GitHub </a>fsf</div>
+    <div class="item" id="item-1"><a href="">GitHub</a></div>
     <div class="item" id="item-2"><a href="">LinkedIn </a></div>
     <div class="item" id="item-3"><a href="">NewsLetter </a></div>
     <div class="item" id="item-4"><a href="">Medium </a></div>
@@ -195,7 +125,7 @@
     <div>
       Handcrafted by
       <a href="https://www.linkedin.com/in/faeka/" target="_blank">
-        Fyka </a> and Open Source ♥
+        Open Source ♥ </a>
       | 2022 All rights reserved
       <<<<<<< HEAD <div class="footer-wrapper">
         <div class="icons">
@@ -225,7 +155,7 @@
 
     </div>
     <span class="floating-footer">
-      Copyright &copy; reserved w Fyka Ansar &nbsp;
+      Copyright &copy; reserved w Fyka Ansari &nbsp;
     </span>
   </footer>
   <script src="./javascript.js"></script>
