--- a/pages/learnings.html
+++ b/pages/learnings.html
@@ -65,8 +65,8 @@
 
                 <!-- Bookmarking Navigation using ids # -->
                 <li><a href="#footer">Footer</a></li>
-                <li><a href="#tables">Tables</a></li>
-                <li><a href="#forms">Forms</a></li>
+                <li><a href="/pages/learnings/table.html">Tables</a></li>
+                <li><a href="/pages/learnings/form.html">Forms</a></li>
                 <li><a href="../index.html">Home</a></li>
 
             </ul>
@@ -513,7 +513,7 @@
     <footer>
         Copyright &copy; reserved w Fyka Ansar &nbsp;
     </footer>
-<script src="../javascript.js"></script>
+    <script src="../javascript.js"></script>
 </body>
 
 </html>
