--- a/pages/learnings/table.html
+++ b/pages/learnings/table.html
@@ -13,37 +13,66 @@
 
 <body>
     <h1 class="text-danger">Table</h1>
-    <div class="work" id="tables">
-
+    <div class="work" id="work">
         <!-- Tables -->
-        <h3 class="subhead">&rAarr;Table of All my work&lAarr;</h3>
-        <table style="width: 95%;">
-            <thead style="border: 2px solid black;">
+        <h3 class="subhead">
+            &rAarr;Educational, Social and Communal contributions &lAarr;
+        </h3>
+        <table style="width: 95%">
+            <thead style="border: 2px solid black">
                 <tr>
-                    <th style="border: 1px solid rgb(173, 44, 44);">Project Name</th>
-                    <th style="border: 1px solid rgb(173, 44, 44);">Details</th>
-                    <th style="border: 1px solid rgb(173, 44, 44);">Duration</th>
-                    <th style="border: 1px solid rgb(173, 44, 44);">Link</th>
+                    <th style="border: 1px solid rgb(173, 44, 44)">Project Name</th>
+                    <th style="border: 1px solid rgb(173, 44, 44)">Details</th>
+                    <th style="border: 1px solid rgb(173, 44, 44)">Duration</th>
+                    <th style="border: 1px solid rgb(173, 44, 44)">Link</th>
                 </tr>
             </thead>
             <tbody>
-                <tr align="center">
-                    <td>Portfolio Page</td>
-                    <td>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis, eaque. Vel unde voluptates
-                        cumque a
-                        deserunt minima illo odit necessitatibus hic facere voluptatibus, veritatis numquam veniam
-                        possimus
-                        ab nesciunt. Sunt?</td>
+                <tr>
+                    <td>Education</td>
+                    <td>
+                        I've been a part of various ed led communities, where i am
+                        managing andn working towards the growth and development of the
+                        women in tech and science
+                    </td>
                     <td>2 mos</td>
                     <td>#</td>
                 </tr>
-                <tr align="center">
-                    <td>Food delivery website</td>
-                    <td>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis, eaque. Vel unde voluptates
-                        cumque a
-                        deserunt minima illo odit necessitatibus hic facere voluptatibus, veritatis numquam veniam
-                        possimus
-                        ab nesciunt. Sunt?</td>
+                <tr>
+                    <td>Politics</td>
+                    <td>
+                        On the great saying
+                        <q><cite>you can't be neutral in a moving train</cite></q> and
+                        the teachings of my professors, I've been interested in
+                        improving the current political and community conditions of the
+                        world, taking small yet significant steps to create awareness
+                        regarding fraternity, brotherhood and promoting peace accross
+                        the nation through stage acts, rallies, marathons and doing
+                        street plays.
+                    </td>
+                    <td>4 mos</td>
+                    <td>#</td>
+                </tr>
+                <tr>
+                    <td>Art</td>
+                    <td>
+                        I've been interested in art since my kindergartin where I first
+                        won my first prize in a school led interschool drawing
+                        Competition, while drawing a tree. From then, though I have
+                        never created any masterpiece nor notable alumni, but made
+                        several leisure time sketched, you can check out.
+                    </td>
+                    <td>4 mos</td>
+                    <td>#</td>
+                </tr>
+                <tr>
+                    <td>Social Contributions</td>
+                    <td>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis,
+                        eaque. Vel unde voluptates cumque a deserunt minima illo odit
+                        necessitatibus hic facere voluptatibus, veritatis numquam veniam
+                        possimus ab nesciunt. Sunt?
+                    </td>
                     <td>4 mos</td>
                     <td>#</td>
                 </tr>
