add hover effect

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
               🎨 sketching/painting!<br />
             </p>
           </div>
-          <button class="about_btn">Let's connect</button>
+          <button class="custom-btn btn-3"><span>Let's connect</span></button>
         </div>
         <div aling="right" class="w50 about_img">
           <img src="./assets/girl.jpg" class="img-responsive imgIM" />
