--- a/index.html
+++ b/index.html
@@ -121,6 +121,29 @@
     <div class="item" id="item-6"><a href="">Leetcode </a></div>
   </div>
 
+  <!-- Contact us -->
+  <section class="contact-us">
+    <div class="container">
+      <form id="contact" action="" method="post">
+        <h3>Quick Contact</h3>
+        <h4>Contact us today, and get reply with in 24 hours!</h4>
+        <fieldset>
+          <input placeholder="Your name" type="text" tabindex="1" required autofocus>
+        </fieldset>
+        <fieldset>
+          <input placeholder="Your Email Address" type="email" tabindex="2" required>
+        </fieldset>
+        <fieldset>
+          <textarea placeholder="Type your Message Here...." tabindex="5" required></textarea>
+        </fieldset>
+        <fieldset>
+          <button name="submit" type="submit" id="contact-submit" data-submit="...Sending">Submit</button>
+        </fieldset>
+      </form>
+    </div>
+  </section>
+
+  <!-- Footer -->
   <footer>
     <div>
       Handcrafted by
