--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
   <header>
     <nav class="navbar" style="display: flex; justify-content: end; ">
-      <h1>Portfolio</h1>
+      <a href="index.html"><h1> Portfolio</h1></a>
       <ul>
 
         <li><a href="#work"> Contributions</a></li>
