adding a new albun in spotify clone

--- a/projects/spotify-clone/index.html
+++ b/projects/spotify-clone/index.html
@@ -164,6 +164,15 @@
               <a href="#">PLAY NOW</a>
             </div>
           </div>
+          <!--Alan Walker-->
+          <div class="album Alan-Walker">
+            <img src="https://cutewallpaper.org/21/alan-walker-logo-wallpapers/Alan-Walker-.jpg"/>
+            <div class="album-info">
+              <h2>Different World</h2>
+              <h4>Alan Walker</h4>
+              <a href="#">PLAY NOW</a>
+            </div>
+          </div>
         </div>
       </div>
     </section>
