--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
       <a href="https://www.linkedin.com/in/faeka/" target="_blank">
         Open Source ♥ </a>
       | 2022 All rights reserved
-      <<<<<<< HEAD <div class="footer-wrapper">
+<div class="footer-wrapper">
         <div class="icons">
           <ul>
             <li>
