--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     </section>
 
     <div class="project" id="project">
-      <h3 class="subhead">A few Projects of mine 🎥 </h3>
+      <h3 class="subhead">Projects🎥 </h3>
 
       <div class="grid-container">
         <div class="grid-item" id="box-1">
