--- a/index.html
+++ b/index.html
@@ -166,7 +166,8 @@
         <div class="grid-item" id="box-10">
           <a href="" target="_blank">
             <div class="image-wrapper"><img src="/assets/main home page/Gandalf.jpg" alt="Static card"/></div>
-            <div class="box">Tribute Page <div class="box-content">Sorry the project detail was not available in any of the folder in inside the readme file. However, the project details goes here. </div></div>
+            <div class="box">Tribute Page <div class="box-content">Sorry the project detail was not available in any of the folder in inside the readme file. However, the project details goes here. </div>
+            </div>
           </a>
         </div>
         <div class="grid-item" id="box-11">
