Footer added to Learnings Page

--- a/pages/learnings/javascript.html
+++ b/pages/learnings/javascript.html
@@ -8,6 +8,7 @@
     <title>Javascript</title>
     <script src="javascript.js"></script>
     <link rel="stylesheet" href="../learnings.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" />
 </head>
 
 <body>
@@ -511,11 +512,48 @@
     <h3>immediately Invoked Function Expression IIFE - - A FUNCTION that is gona be executed as soon as your page loads
     </h3>
 
+<div class="line">
+</div>
+<div id="foot">
 
-    <div id="foot">
+  <footer>
+    <div>
+      Handcrafted by
+      <a href="https://www.linkedin.com/in/faeka/" class="footer-text">
+        Open Source ♥ </a>
+      | 2022 All rights reserved
+      <div class="footer-wrapper">
+        <div class="icons">
+          <ul>
+            <li>
+              <a title="linkedin" target="_blank" href="https://www.linkedin.com/in/" class="ml-3 text-gray-400">
+                <i class="fab fa-linkedin-in icon"></i>
+              </a>
+            </li>
+            <li>
+              <a title="github" target="_blank" href="https://github.com/" class="ml-3 text-gray-400">
+                <i class="fab fa-github icon"></i>
+              </a>
+            </li>
+            <li>
+              <a title="twitter" target="_blank" href="https://twitter.com/" class="ml-3 text-gray-400">
+                <i class="fab fa-twitter icon"></i>
+              </a>
+            </li>
+            <li>
+              <a title="youtube" target="_blank" href="#" class="ml-3 text-gray-400">
+                <i class="fab fa-instagram icon"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
 
-        Footer
-    </div>
+      </div>
+      <span class="floating-footer">
+        Copyright &copy; reserved w Fyka Ansari &nbsp;
+      </span>
+  </footer>
+</div>
 
 </body>
 
