--- a/index.html
+++ b/index.html
@@ -234,12 +234,14 @@
       <form id="contact" action="" method="post">
         <h3>Quick Contact</h3>
         <h4>Contact us today, and get reply with in 24 hours!</h4>
+        <div class="field">
         <fieldset>
           <input placeholder="Your name" type="text" tabindex="1" required autofocus>
         </fieldset>
         <fieldset>
           <input placeholder="Your Email Address" type="email" tabindex="2" required>
         </fieldset>
+      </div>
         <fieldset>
           <textarea placeholder="Type your Message Here...." tabindex="5" required></textarea>
         </fieldset>
